--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -21,7 +21,7 @@ web:
     locations:
         "/":
             # The public directory of the app, relative to its root.
-            root: "."
+            root: ""
             # The front-controller script to send non-static requests to.
             passthru: "/index.php"
 
