--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -31,7 +31,7 @@ disk: 2048
 # The mounts that will be performed when the package is deployed.
 mounts:
     "/silverstripe-cache": "shared:files/cache"
-    "/assets/Uploads" : "shared:files/uploads"
+    "/assets/" : "shared:files/assets"
 
 # The hooks that will be performed when the package is deployed.
 #hooks:
